Changes to assertion in test and syntax